# BIO-MORF

./: .gitignore  README.md
docs/: scheme.drawio
docs/Report/: 2025_1113_Отчет.odt
ws/src/: CMakeLists.txt  FishSimulation  FishSimulation.pro  MainWindow.cpp  MainWindow.hpp  Makefile  SimulationThread.cpp  SimulationThread.hpp  build_sim.sh  clean_build.sh  fish_simulation  install_deps.sh  main.cpp  moc_MainWindow.cpp  moc_SimulationThread.cpp  plot_3d.gnu  plot_results.gnu  plot_trajectory.gnu  simulation_parameters.hpp  trajectory_data.txt
ws/src/simulation/: fish_simulation.cpp  fish_simulation.hpp
